@@ -7,7 +7,6 @@ import me.insidezhou.southernquiet.logging.SouthernQuietLoggerFactory;
 import me.insidezhou.southernquiet.notification.AmqpNotificationAutoConfiguration;
 import me.insidezhou.southernquiet.notification.NotificationListener;
 import me.insidezhou.southernquiet.util.Amplifier;
-import me.insidezhou.southernquiet.util.Tuple;
 import org.springframework.amqp.core.Queue;
 import org.springframework.amqp.core.*;
 import org.springframework.amqp.rabbit.annotation.RabbitListenerConfigurer;
@@ -17,7 +16,6 @@ import org.springframework.amqp.rabbit.connection.CachingConnectionFactory;
 import org.springframework.amqp.rabbit.connection.ConnectionNameStrategy;
 import org.springframework.amqp.rabbit.connection.RabbitConnectionFactoryBean;
 import org.springframework.amqp.rabbit.core.RabbitTemplate;
-import org.springframework.amqp.rabbit.listener.RabbitListenerEndpoint;
 import org.springframework.amqp.rabbit.listener.RabbitListenerEndpointRegistrar;
 import org.springframework.amqp.support.converter.SmartMessageConverter;
 import org.springframework.beans.factory.ObjectProvider;
@@ -32,6 +30,7 @@ import org.springframework.util.StringUtils;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.util.*;
+import java.util.stream.Collectors;
 
 public class AmqpNotificationListenerManager extends AbstractNotificationListenerManager implements Lifecycle, RabbitListenerConfigurer {
     private final static SouthernQuietLogger log = SouthernQuietLoggerFactory.getLogger(AmqpNotificationListenerManager.class);
@@ -39,7 +38,7 @@ public class AmqpNotificationListenerManager extends AbstractNotificationListene
     private final SmartMessageConverter messageConverter;
     private final CachingConnectionFactory cachingConnectionFactory;
 
-    private final List<Tuple<RabbitListenerEndpoint, NotificationListener, String>> listenerEndpoints = new ArrayList<>();
+    private final List<ListenerEndpoint> listenerEndpoints = new ArrayList<>();
     private final AmqpAutoConfiguration.Properties amqpProperties;
     private final AmqpNotificationAutoConfiguration.Properties amqpNotificationProperties;
     private final Amplifier amplifier;
@@ -74,10 +73,11 @@ public class AmqpNotificationListenerManager extends AbstractNotificationListene
 
     @Override
     public void configureRabbitListeners(RabbitListenerEndpointRegistrar registrar) {
-        listenerEndpoints.forEach(tuple -> {
-            RabbitListenerEndpoint endpoint = tuple.getFirst();
-            NotificationListener listenerAnnotation = tuple.getSecond();
-            String listenerName = tuple.getThird();
+        listenerEndpoints.stream().collect(Collectors.groupingBy(ListenerEndpoint::getRouting)).forEach((routing, group) -> {
+            ListenerEndpoint endpoint = group.get(0);
+            String listenerName = endpoint.getListenerName();
+
+            NotificationListener listenerAnnotation = endpoint.getListenerAnnotation();
             Amplifier amplifier = this.amplifier;
 
             if (!StringUtils.isEmpty(listenerAnnotation.amplifierBeanName())) {
@@ -91,7 +91,7 @@ public class AmqpNotificationListenerManager extends AbstractNotificationListene
                     amplifier,
                     Constants.AMQP_DEFAULT,
                     getDeadRouting(amqpNotificationProperties.getNamePrefix(), listenerAnnotation, listenerName),
-                    Constants.AMQP_DEFAULT,
+                    AbstractAmqpNotificationPublisher.getDelayRouting(amqpNotificationProperties.getNamePrefix(), listenerAnnotation.notification()),
                     getRetryRouting(amqpNotificationProperties.getNamePrefix(), listenerAnnotation, listenerName),
                     amqpProperties
                 ),
@@ -101,64 +101,59 @@ public class AmqpNotificationListenerManager extends AbstractNotificationListene
             DirectRabbitListenerContainerFactory factory = new DirectRabbitListenerContainerFactory();
             factory.setMessageConverter(messageConverter);
             factory.setAcknowledgeMode(amqpProperties.getAcknowledgeMode());
+            factory.setConsumersPerQueue(listenerAnnotation.concurrency());
             containerFactoryConfigurer.configure(factory, cachingConnectionFactory);
 
-            registrar.registerEndpoint(endpoint, factory);
+            SimpleRabbitListenerEndpoint rabbitListenerEndpoint = new SimpleRabbitListenerEndpoint();
+            rabbitListenerEndpoint.setId(UUID.randomUUID().toString());
+            rabbitListenerEndpoint.setQueueNames(endpoint.getRouting());
+            rabbitListenerEndpoint.setAdmin(amqpAdmin);
+            rabbitListenerEndpoint.setMessageListener(endpoint.getMessageListener());
+
+            registrar.registerEndpoint(rabbitListenerEndpoint, factory);
         });
     }
 
     @Override
     protected void initListener(NotificationListener listener, Object bean, Method method) {
-        int concurrency = listener.concurrency();
-        int concurrencyLimit = amqpNotificationProperties.getConcurrencyLimit();
+        String listenerName = getListenerName(listener, method);
+        String listenerRouting = getListenerRouting(listener, listenerName);
 
-        if (concurrency <= 0)
-            concurrency = 1;
-        else if (concurrencyLimit >= 1 && concurrency > concurrencyLimit)
-            concurrency = concurrencyLimit;
+        listenerEndpoints.stream()
+            .filter(listenerEndpoint -> listener.notification() == listenerEndpoint.getListenerAnnotation().notification() && listenerName.equals(listenerEndpoint.getListenerName()))
+            .findAny()
+            .ifPresent(listenerEndpoint -> log.message("监听器重复")
+                .context(context -> {
+                    context.put("queue", listenerRouting);
+                    context.put("listener", bean.getClass().getName());
+                    context.put("listenerName", listenerName);
+                    context.put("notification", listener.notification().getSimpleName());
+                })
+                .warn());
 
-        for (int i = 0; i < concurrency; i++) {
+        declareExchangeAndQueue(listener, listenerName);
 
-            String listenerName = getListenerName(listener, method);  //queueName 默认方法名
-            String listenerRouting = getListenerRouting(listener, listenerName); //Notification.类名#queueName  / Notification.ExchangeName#queueName
+        DelayedMessage delayedAnnotation = AnnotatedElementUtils.findMergedAnnotation(listener.notification(), DelayedMessage.class);
 
-            DelayedMessage delayedAnnotation = AnnotatedElementUtils.findMergedAnnotation(listener.notification(), DelayedMessage.class);
-            //校验重复
-            listenerEndpoints.stream()
-                .filter(listenerEndpoint -> listener.notification() == listenerEndpoint.getSecond().notification() && listenerName.equals(listenerEndpoint.getThird()))
-                .findAny()
-                .ifPresent(listenerEndpoint -> log.message("监听器重复")
-                    .context(context -> {
-                        context.put("queue", listenerRouting);
-                        context.put("listener", bean.getClass().getName());
-                        context.put("listenerName", listenerName);
-                        context.put("notification", listener.notification().getSimpleName());
-                    })
-                    .warn());
+        ListenerEndpoint listenerEndpoint = new ListenerEndpoint();
+        listenerEndpoint.setListenerName(listenerName);
+        listenerEndpoint.setListenerAnnotation(listener);
+        listenerEndpoint.setRouting(listenerRouting);
+        listenerEndpoint.setMessageListener(generateMessageListener(
+            ParameterizedTypeReference.forType(listener.notification()),
+            listenerRouting,
+            listener,
+            bean,
+            method,
+            listenerName,
+            delayedAnnotation
+        ));
 
-            SimpleRabbitListenerEndpoint endpoint = new SimpleRabbitListenerEndpoint();
-            endpoint.setId(UUID.randomUUID().toString());
-            endpoint.setQueueNames(listenerRouting);
-            endpoint.setAdmin(amqpAdmin);
-
-            declareExchangeAndQueue(listener, listenerName);//声明交换器和队列
-
-            endpoint.setMessageListener(generateMessageListener(
-                ParameterizedTypeReference.forType(listener.notification()),
-                endpoint,
-                listener,
-                bean,
-                method,
-                listenerName,
-                delayedAnnotation
-            ));
-
-            listenerEndpoints.add(new Tuple<>(endpoint, listener, listenerName));
-        }
+        listenerEndpoints.add(listenerEndpoint);
     }
 
     protected MessageListener generateMessageListener(ParameterizedTypeReference<?> typeReference,
-                                                      SimpleRabbitListenerEndpoint endpoint,
+                                                      String routing,
                                                       NotificationListener listener,
                                                       Object bean,
                                                       Method method,
@@ -168,7 +163,7 @@ public class AmqpNotificationListenerManager extends AbstractNotificationListene
         return message -> {
             Object notification = messageConverter.fromMessage(message, typeReference);
 
-            onMessageReceived(endpoint, bean, listenerName, notification, message);
+            onMessageReceived(routing, bean, listenerName, notification, message);
 
             Object[] parameters = Arrays.stream(method.getParameters())
                 .map(parameter -> {
@@ -224,7 +219,7 @@ public class AmqpNotificationListenerManager extends AbstractNotificationListene
     }
 
     protected void onMessageReceived(
-        SimpleRabbitListenerEndpoint endpoint,
+        String routing,
         Object bean,
         String listenerName,
         Object notification,
@@ -232,29 +227,25 @@ public class AmqpNotificationListenerManager extends AbstractNotificationListene
     ) {
         log.message("收到通知")
             .context(context -> {
-                context.put("queue", endpoint.getQueueNames());
+                context.put("queue", routing);
                 context.put("listener", bean.getClass().getName());
                 context.put("listenerName", listenerName);
-                context.put("listenerId", endpoint.getId());
                 context.put("notification", notification.getClass().getSimpleName());
                 context.put("message", message);
             })
             .debug();
     }
 
-    public final static String DeadMark = "DEAD.";
-    public final static String RetryMark = "RETRY.";
-
     public static String getDeadRouting(String prefix, NotificationListener listener, String listenerName) {
         return AbstractAmqpNotificationPublisher.getRouting(
             prefix,
-            suffix(DeadMark + AbstractAmqpNotificationPublisher.getNotificationSource(listener.notification()), listenerName));
+            suffix("DEAD." + AbstractAmqpNotificationPublisher.getNotificationSource(listener.notification()), listenerName));
     }
 
     public static String getRetryRouting(String prefix, NotificationListener listener, String listenerName) {
         return AbstractAmqpNotificationPublisher.getRouting(
             prefix,
-            suffix(RetryMark + AbstractAmqpNotificationPublisher.getNotificationSource(listener.notification()), listenerName));
+            suffix("RETRY." + AbstractAmqpNotificationPublisher.getNotificationSource(listener.notification()), listenerName));
     }
 
     private String getListenerRouting(NotificationListener listener, String listenerName) {
@@ -277,10 +268,10 @@ public class AmqpNotificationListenerManager extends AbstractNotificationListene
 
     private void declareExchangeAndQueue(NotificationListener listener, String listenerName) {
         String routing = AbstractAmqpNotificationPublisher.getRouting(amqpNotificationProperties.getNamePrefix(), listener.notification());
-        String delayRouting = AbstractAmqpNotificationPublisher.getDelayedRouting(amqpNotificationProperties.getNamePrefix(), listener.notification());
+        String delayRouting = AbstractAmqpNotificationPublisher.getDelayRouting(amqpNotificationProperties.getNamePrefix(), listener.notification());
         String listenerRouting = getListenerRouting(listener, listenerName);
 
-        Exchange exchange = new FanoutExchange(AbstractAmqpNotificationPublisher.getExchange(amqpNotificationProperties.getNamePrefix(), listener.notification()));
+        Exchange exchange = new FanoutExchange(routing, true, false);
         Queue queue = new Queue(listenerRouting);
 
         amqpAdmin.declareExchange(exchange);
@@ -294,19 +285,45 @@ public class AmqpNotificationListenerManager extends AbstractNotificationListene
         Queue deadRouting = new Queue(getDeadRouting(amqpNotificationProperties.getNamePrefix(), listener, listenerName), true, false, false, deadQueueArgs);
         amqpAdmin.declareQueue(deadRouting);
 
+        Map<String, Object> exchangeArguments = new HashMap<>();
+        exchangeArguments.put(Constants.AMQP_DELAYED_TYPE, "direct");
+        Exchange delayExchange = new CustomExchange(
+            delayRouting,
+            Constants.AMQP_DELAYED_EXCHANGE,
+            true,
+            false,
+            exchangeArguments
+        );
+
+        amqpAdmin.declareExchange(delayExchange);
+
         Map<String, Object> retryQueueArgs = new HashMap<>();
         retryQueueArgs.put(Constants.AMQP_DLX, Constants.AMQP_DEFAULT);
         retryQueueArgs.put(Constants.AMQP_DLK, queue.getName());
-
-        Queue retryRouting = new Queue(getRetryRouting(amqpNotificationProperties.getNamePrefix(), listener, listenerName), true, false, false, retryQueueArgs);
-        amqpAdmin.declareQueue(retryRouting);
+        retryQueueArgs.put(Constants.AMQP_MESSAGE_TTL, 0); //这里的硬编码是为了消息到达队列之后立即转发至相应的工作队列。下同。
+        Queue retryQueue = new Queue(
+            getRetryRouting(amqpNotificationProperties.getNamePrefix(), listener, listenerName),
+            true,
+            false,
+            false,
+            retryQueueArgs
+        );
+        amqpAdmin.declareQueue(retryQueue);
+        amqpAdmin.declareBinding(BindingBuilder.bind(retryQueue).to(delayExchange).with(retryQueue.getName()).noargs());
 
         Map<String, Object> delayQueueArgs = new HashMap<>();
-        delayQueueArgs.put(Constants.AMQP_DLX, exchange.getName());
+        delayQueueArgs.put(Constants.AMQP_DLX, routing);
         delayQueueArgs.put(Constants.AMQP_DLK, routing);
-
-        Queue delayQueue = new Queue(delayRouting, true, false, false, delayQueueArgs);
+        delayQueueArgs.put(Constants.AMQP_MESSAGE_TTL, 0);
+        Queue delayQueue = new Queue(
+            AbstractAmqpNotificationPublisher.getDelayRouting(amqpNotificationProperties.getNamePrefix(), listener.notification()),
+            true,
+            false,
+            false,
+            delayQueueArgs
+        );
         amqpAdmin.declareQueue(delayQueue);
+        amqpAdmin.declareBinding(BindingBuilder.bind(delayQueue).to(delayExchange).with(delayQueue.getName()).noargs());
     }
 
     @Override
@@ -322,5 +339,44 @@ public class AmqpNotificationListenerManager extends AbstractNotificationListene
     @Override
     public boolean isRunning() {
         return rabbitTemplate.isRunning();
+    }
+
+    static class ListenerEndpoint {
+        private NotificationListener listenerAnnotation;
+        private String listenerName;
+        private String routing;
+        private MessageListener messageListener;
+
+        public NotificationListener getListenerAnnotation() {
+            return listenerAnnotation;
+        }
+
+        public void setListenerAnnotation(NotificationListener listenerAnnotation) {
+            this.listenerAnnotation = listenerAnnotation;
+        }
+
+        public String getListenerName() {
+            return listenerName;
+        }
+
+        public void setListenerName(String listenerName) {
+            this.listenerName = listenerName;
+        }
+
+        public String getRouting() {
+            return routing;
+        }
+
+        public void setRouting(String routing) {
+            this.routing = routing;
+        }
+
+        public MessageListener getMessageListener() {
+            return messageListener;
+        }
+
+        public void setMessageListener(MessageListener messageListener) {
+            this.messageListener = messageListener;
+        }
     }
 }
